# axum-sqlx-tera-jwt-auth

./: .gitignore  Cargo.toml  README.md  env.example 
assets/css/: style.css
migrations/: 20240708054005_init.down.sql  20240708054005_init.up.sql
src/: common.rs  lib.rs  main.rs  routes_account.rs  routes_assets.rs  routes_index.rs  state.rs
src/auth/: handlers.rs  middleware.rs  models.rs  repository.rs
src/profile/: handlers.rs  models.rs  views.rs
src/utils/: cookie.rs  date_config.rs  date_option.rs  db.rs  jwt.rs  message.rs  q_body.rs
templates/: base.html  footer.html  index.html  messages.html  navbar.html
templates/auth/: email-verify-resend.html  email-verify.html  login.html  logout.html  reset-password-confirm.html  reset-password.html  signup.html
templates/profile/: detail.html  update.html
