[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "form", "cookie"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "macros", "chrono", "any"] }
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "timeout", "load-shed"] }
tower-http = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde", "alloc"] }
jsonwebtoken = "9.3.0"
cookie = "0.18.1"
headers = "0.4.0"
tera = "1.20.0"
axum-macros = "0.4.1"
bincode = "1.3.3"
validator = "0.18.1"
validator_derive = "0.18.1"
thiserror = "1.0.63"
async-trait = "0.1.81"
once_cell = "1.19.0"
rand_core = "0.6.4"
argon2 = "0.5.3"
